# apa102d

./: README.md  apa102.c  apa102.h  bubbles.c  color.c  color.h  main.c  particles.c  particles.h  waves.c  waves.h
apa102/: CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  apa102.c  apa102.h  bubbles.c  bubbles.h  client.c  color.c  color.h  config.c  config.h  main.c  off.c  off.h  particles.c  particles.h  simple_step.c  simple_step.h  single_color.c  single_color.h  step.c  step.h  stroboscope.c  stroboscope.h  test.c  test.h  text.c  text.h  waves.c
web/: index.php  set.php
web-node/: .eslintrc.yml  application.js  index.html  index.js  package.json  server.js
